bug 50811 wrong feedback z-index

--- a/QtiPageEditor/src/eu/ydp/qtiPageEditor/public/QtiPageEditor.css
+++ b/QtiPageEditor/src/eu/ydp/qtiPageEditor/public/QtiPageEditor.css
@@ -33,6 +33,10 @@ h1 {
   z-index: 400001;
 }
 
+.qp-feedback-inline-wrong {
+  z-index: 400001;
+}
+
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
   margin: 15px 6px 6px;
